--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
             background: linear-gradient(to right, var(--accent), #60a5fa);
             border-radius: 2px;
         }
+
+        .logo {
+            background: linear-gradient(rgba(18, 44, 99, 0.3), rgba(18, 44, 99, 0.3)), 
+                  url('school-logo.png') center center/cover no-repeat;
     </style>
 </head>
 <body class="min-h-screen flex flex-col items-center p-4 sm:p-6 lg:p-8">
@@ -126,7 +130,7 @@
         <header class="text-center mb-8">
             <div class="flex justify-center mb-4">
                 <div class="bg-white rounded-full p-3 shadow-lg">
-                    <div class="bg-gray-200 border-2 border-dashed rounded-xl w-16 h-16 flex items-center justify-center text-gray-500 font-bold">LOGO</div>
+                    <div class="bg-gray-200 border-2 border-dashed rounded-xl w-16 h-16 flex items-center justify-center text-gray-500 font-bold logo">LOGO</div>
                 </div>
             </div>
             <h1 class="text-3xl sm:text-4xl font-bold text-green-900 mb-2">IETI College of Science and Technology</h1>
