--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <header class="text-center mb-8">
             <div class="flex justify-center mb-4">
                 <div class="bg-white rounded-full p-3 shadow-lg">
-                    <div class="bg-gray-200 border-2 border-dashed rounded-xl w-16 h-16 flex items-center justify-center text-gray-500 font-bold logo">LOGO</div>
+                    <div class="bg-gray-200 border-2 border-dashed rounded-xl w-16 h-16 flex items-center justify-center text-gray-500 font-bold logo"></div>
                 </div>
             </div>
             <h1 class="text-3xl sm:text-4xl font-bold text-green-900 mb-2">IETI College of Science and Technology</h1>
@@ -141,7 +141,7 @@
         <!-- Class Info Card -->
         <div class="bg-white rounded-2xl shadow-xl mb-8 overflow-hidden">
             <div class="bg-gradient-to-r from-green-800 to-green-700 text-white p-5 text-center">
-                <h2 class="text-2xl sm:text-3xl font-bold mb-2">GRADE 11 GAS A CLASS SCHEDULE</h2>
+                <h2 class="text-2xl sm:text-3xl font-bold mb-2">GRADE 11 STEM C CLASS SCHEDULE</h2>
                 <div class="flex flex-col sm:flex-row justify-center items-center gap-4 mt-3">
                     <div class="bg-green-600 px-4 py-2 rounded-full text-sm font-medium">
                         GRADE 11 GAS A / ROOM 107
