--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <h2 class="text-2xl sm:text-3xl font-bold mb-2">GRADE 11 STEM C CLASS SCHEDULE</h2>
                 <div class="flex flex-col sm:flex-row justify-center items-center gap-4 mt-3">
                     <div class="bg-green-600 px-4 py-2 rounded-full text-sm font-medium">
-                        GRADE 11 GAS A / ROOM 107
+                        GRADE 11 STEM C / ROOM 107
                     </div>
                     <div class="bg-yellow-500 text-green-900 px-4 py-2 rounded-full text-sm font-medium">
                         ADVISER: MS. ROZANNE MILLEN MANOZO
